// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Intro] Interaction should login when button has clicked 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "basic": "#000000",
            "contrast": "#FFFFFF",
            "disabled": "#BEBEBE",
            "fontSize": 18,
            "label": "#4D4D4D",
            "lineHeight": 27,
            "placeholder": "#787878",
            "validation": "#DA0000",
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "basic": "#000000",
            "contrast": "#FFFFFF",
            "disabled": "#BEBEBE",
            "fontSize": 18,
            "label": "#4D4D4D",
            "lineHeight": 27,
            "placeholder": "#787878",
            "validation": "#DA0000",
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "basic": "#000000",
            "contrast": "#FFFFFF",
            "disabled": "#BEBEBE",
            "fontSize": 18,
            "label": "#4D4D4D",
            "lineHeight": 27,
            "placeholder": "#787878",
            "validation": "#DA0000",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "75%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#47498A",
                "borderBottomColor": "#47498A",
                "borderLeftColor": "#47498A",
                "borderRightColor": "#47498A",
                "borderTopColor": "#47498A",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="loading-view"
        type="solid"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "transparent",
              "flex": 1,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <ActivityIndicator
            color="#000000"
            size="small"
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#47498A",
                "borderBottomColor": "#47498A",
                "borderLeftColor": "#47498A",
                "borderRightColor": "#47498A",
                "borderTopColor": "#47498A",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          navigate
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#47498A",
                "borderBottomColor": "#47498A",
                "borderLeftColor": "#47498A",
                "borderRightColor": "#47498A",
                "borderTopColor": "#47498A",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render [Dark] theme 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "basic": "#000000",
            "contrast": "#FFFFFF",
            "disabled": "#BEBEBE",
            "fontSize": 18,
            "label": "#4D4D4D",
            "lineHeight": 27,
            "placeholder": "#787878",
            "validation": "#DA0000",
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "basic": "#000000",
            "contrast": "#FFFFFF",
            "disabled": "#BEBEBE",
            "fontSize": 18,
            "label": "#4D4D4D",
            "lineHeight": 27,
            "placeholder": "#787878",
            "validation": "#DA0000",
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "basic": "#000000",
            "contrast": "#FFFFFF",
            "disabled": "#BEBEBE",
            "fontSize": 18,
            "label": "#4D4D4D",
            "lineHeight": 27,
            "placeholder": "#787878",
            "validation": "#DA0000",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "75%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#47498A",
                "borderBottomColor": "#47498A",
                "borderLeftColor": "#47498A",
                "borderRightColor": "#47498A",
                "borderTopColor": "#47498A",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Image
          source={
            Object {
              "createTransformer": [Function],
            }
          }
          style={
            Object {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          login
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#47498A",
                "borderBottomColor": "#47498A",
                "borderLeftColor": "#47498A",
                "borderRightColor": "#47498A",
                "borderTopColor": "#47498A",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          navigate
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#47498A",
                "borderBottomColor": "#47498A",
                "borderLeftColor": "#47498A",
                "borderRightColor": "#47498A",
                "borderTopColor": "#47498A",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render [isDisabled] status 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#232323",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "D",
            "2": "3",
            "3": "D",
            "4": "8",
            "5": "E",
            "6": "8",
            "basic": "#FFFFFF",
            "contrast": "#000000",
            "disabled": "#4D4D4D",
            "fontSize": 18,
            "label": "#BEBEBE",
            "lineHeight": 27,
            "placeholder": "#909090",
            "validation": "#FF2C2C",
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "D",
            "2": "3",
            "3": "D",
            "4": "8",
            "5": "E",
            "6": "8",
            "basic": "#FFFFFF",
            "contrast": "#000000",
            "disabled": "#4D4D4D",
            "fontSize": 18,
            "label": "#BEBEBE",
            "lineHeight": 27,
            "placeholder": "#909090",
            "validation": "#FF2C2C",
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "D",
            "2": "3",
            "3": "D",
            "4": "8",
            "5": "E",
            "6": "8",
            "basic": "#FFFFFF",
            "contrast": "#000000",
            "disabled": "#4D4D4D",
            "fontSize": 18,
            "label": "#BEBEBE",
            "lineHeight": 27,
            "placeholder": "#909090",
            "validation": "#FF2C2C",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "75%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#585DFA",
                "borderBottomColor": "#585DFA",
                "borderLeftColor": "#585DFA",
                "borderRightColor": "#585DFA",
                "borderTopColor": "#585DFA",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Image
          source={
            Object {
              "createTransformer": [Function],
            }
          }
          style={
            Object {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
              },
              undefined,
            ]
          }
        >
          login
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#585DFA",
                "borderBottomColor": "#585DFA",
                "borderLeftColor": "#585DFA",
                "borderRightColor": "#585DFA",
                "borderTopColor": "#585DFA",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
              },
              undefined,
            ]
          }
        >
          navigate
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#585DFA",
                "borderBottomColor": "#585DFA",
                "borderLeftColor": "#585DFA",
                "borderRightColor": "#585DFA",
                "borderTopColor": "#585DFA",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
              },
              undefined,
            ]
          }
        >
          change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render [isLoading] status 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#232323",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "D",
            "2": "3",
            "3": "D",
            "4": "8",
            "5": "E",
            "6": "8",
            "basic": "#FFFFFF",
            "contrast": "#000000",
            "disabled": "#4D4D4D",
            "fontSize": 18,
            "label": "#BEBEBE",
            "lineHeight": 27,
            "placeholder": "#909090",
            "validation": "#FF2C2C",
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "D",
            "2": "3",
            "3": "D",
            "4": "8",
            "5": "E",
            "6": "8",
            "basic": "#FFFFFF",
            "contrast": "#000000",
            "disabled": "#4D4D4D",
            "fontSize": 18,
            "label": "#BEBEBE",
            "lineHeight": 27,
            "placeholder": "#909090",
            "validation": "#FF2C2C",
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "D",
            "2": "3",
            "3": "D",
            "4": "8",
            "5": "E",
            "6": "8",
            "basic": "#FFFFFF",
            "contrast": "#000000",
            "disabled": "#4D4D4D",
            "fontSize": 18,
            "label": "#BEBEBE",
            "lineHeight": 27,
            "placeholder": "#909090",
            "validation": "#FF2C2C",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "75%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#585DFA",
                "borderBottomColor": "#585DFA",
                "borderLeftColor": "#585DFA",
                "borderRightColor": "#585DFA",
                "borderTopColor": "#585DFA",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Image
          source={
            Object {
              "createTransformer": [Function],
            }
          }
          style={
            Object {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
              },
              undefined,
            ]
          }
        >
          login
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#585DFA",
                "borderBottomColor": "#585DFA",
                "borderLeftColor": "#585DFA",
                "borderRightColor": "#585DFA",
                "borderTopColor": "#585DFA",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
              },
              undefined,
            ]
          }
        >
          navigate
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#585DFA",
                "borderBottomColor": "#585DFA",
                "borderLeftColor": "#585DFA",
                "borderRightColor": "#585DFA",
                "borderTopColor": "#585DFA",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
              },
              undefined,
            ]
          }
        >
          change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render outer component and snapshot matches 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "basic": "#000000",
            "contrast": "#FFFFFF",
            "disabled": "#BEBEBE",
            "fontSize": 18,
            "label": "#4D4D4D",
            "lineHeight": 27,
            "placeholder": "#787878",
            "validation": "#DA0000",
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "basic": "#000000",
            "contrast": "#FFFFFF",
            "disabled": "#BEBEBE",
            "fontSize": 18,
            "label": "#4D4D4D",
            "lineHeight": 27,
            "placeholder": "#787878",
            "validation": "#DA0000",
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "basic": "#000000",
            "contrast": "#FFFFFF",
            "disabled": "#BEBEBE",
            "fontSize": 18,
            "label": "#4D4D4D",
            "lineHeight": 27,
            "placeholder": "#787878",
            "validation": "#DA0000",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "75%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#47498A",
                "borderBottomColor": "#47498A",
                "borderLeftColor": "#47498A",
                "borderRightColor": "#47498A",
                "borderTopColor": "#47498A",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Image
          source={
            Object {
              "createTransformer": [Function],
            }
          }
          style={
            Object {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          login
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#47498A",
                "borderBottomColor": "#47498A",
                "borderLeftColor": "#47498A",
                "borderRightColor": "#47498A",
                "borderTopColor": "#47498A",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          navigate
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        size="medium"
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            Array [
              Object {
                "backgroundColor": "#47498A",
                "borderBottomColor": "#47498A",
                "borderLeftColor": "#47498A",
                "borderRightColor": "#47498A",
                "borderTopColor": "#47498A",
                "paddingBottom": 12,
                "paddingLeft": 24,
                "paddingRight": 24,
                "paddingTop": 12,
              },
              false,
              undefined,
            ],
          ]
        }
        testID="button-container"
        type="solid"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;
